--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -1,5 +1,5 @@
 <h1>Rails Girls Hong Kong</h1>
 <p>It's Sleepy after lunch!</p>
 <p>Thanks our sponsor for the food</p>
-
+<p>Modify Landing Page</p>
 <p>Find me in app/views/pages/info.html.erb</p>
